# adk-dynamic-workflows

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: review.json
src/adk_dynamic_workflows/: __init__.py  adk_backend.py  cli.py  interpreter.py  planner.py  spec.py  temporal_backend.py
tests/: test_adk_backend.py  test_interpreter.py  test_planner.py  test_spec.py
tests/integration/: test_litellm_planner.py  test_temporal_adk2.py
