[project]
name = "adk-dynamic-workflows"
version = "0.1.0"
description = "Model-generated, backend-neutral dynamic workflows for Google ADK"
readme = "README.md"
authors = [
    { name = "Manoj Mahalingam", email = "manojlds@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.0.0",
    "pydantic>=2.12",
]

[project.scripts]
adk-dynamic-workflows = "adk_dynamic_workflows.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]

[project.optional-dependencies]
temporal = [
    "temporalio>=1.30.0",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
